# wasmtime

./: Cargo.toml
cranelift/codegen/: build.rs
cranelift/codegen/src/: nan_canonicalization.rs
cranelift/codegen/src/isa/: mod.rs
cranelift/isle/isle/src/: codegen.rs
cranelift/native/src/: lib.rs
crates/compile/: Cargo.toml
crates/compile/src/: config.rs  lib.rs  serialization.rs
crates/jit/: Cargo.toml
crates/jit-runtime/: Cargo.toml
crates/jit-runtime/src/: code_memory.rs  instantiate.rs  lib.rs  mmap_code_memory.rs  mmap_instantiate.rs  profiling.rs
crates/jit/src/: code_memory.rs  debug.rs  instantiate.rs  lib.rs  profiling.rs
crates/jit/src/profiling/: perfmap.rs
crates/wasmtime/: Cargo.toml
crates/wasmtime/src/: code.rs  compiler.rs  config.rs  engine.rs  lib.rs  module.rs  profiling.rs  trap.rs
crates/wasmtime/src/component/: component.rs
crates/wasmtime/src/engine/: serialization.rs
crates/wasmtime/src/module/: registry.rs
crates/wasmtime/src/profiling/: jitdump.rs  vtune.rs
crates/wasmtime/src/runtime/: module.rs  vm.rs
crates/wasmtime/src/runtime/component/: component.rs
crates/wasmtime/src/runtime/vm/sys/custom/: mmap.rs
crates/wasmtime/src/runtime/vm/sys/miri/: mmap.rs
crates/wasmtime/src/runtime/vm/sys/unix/: mmap.rs
crates/wasmtime/src/runtime/vm/sys/windows/: mmap.rs
crates/wasmtime/src/trampoline/: func.rs
src/: common.rs
tests/all/: module_serialize.rs
