[package]
name = "wasmtime-compile"
version.workspace = true
authors.workspace = true
description = "---"
documentation = "https://docs.rs/wasmtime-compile"
license = "Apache-2.0 WITH LLVM-exception"
categories = ["wasm"]
keywords = ["webassembly", "wasm"]
repository = "https://github.com/bytecodealliance/wasmtime"
edition.workspace = true

[dependencies]
wasmtime-environ = { workspace = true }
wasmtime-jit = { workspace = true }
wasmtime-cranelift = { workspace = true, optional = true }
wasmtime-winch = { workspace = true, optional = true }
target-lexicon = { workspace = true }
anyhow = { workspace = true }
object = { workspace = true }
serde = "1.0.188"
serde_derive = "1.0.188"
bincode = "1.2.1"
wasmparser = { workspace = true }

[features]
default = ['cranelift']

# An on-by-default feature enabling runtime compilation of WebAssembly modules
# with the Cranelift compiler. Cranelift is the default compilation backend of
# Wasmtime. If disabled then WebAssembly modules can only be created from
# precompiled WebAssembly modules.
cranelift = ["dep:wasmtime-cranelift"]

# Enables support for winch, the WebAssembly baseline compiler. The Winch compiler
# strategy in `Config` will be available. It is currently in active development
# and shouldn't be used in production applications.
winch = ["dep:wasmtime-winch"]

# Enables in-progress support for the component model. Note that this feature is
# in-progress, buggy, and incomplete. This is primarily here for internal
# testing purposes.
component-model = [
	"wasmtime-environ/component-model",
	"wasmtime-cranelift?/component-model",
	"wasmtime-winch?/component-model",
]
